# fts-assessment

./: .gitignore  CITATION.cff  README.md  pip_freeze.txt  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml
ml/: dataset.py  inference.py  model.py  svm.py  train.py
preprocessing/: baseprod_helpers.py  export_classification_stats.py  find_usable.py  plot_fts_imu.py  plt_helpers.py
tests/: test_baseprod_helpers.py  test_dataset.py  test_export_classification_stats.py  test_model.py  test_plt_helpers.py
tests/testdata/: training_data.csv
