[project]
name = "ft"
dynamic = ["version"]
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torcheval>=0.0.7",
]
requires-python = ">=3.10"
authors = [{ name = "Levin Gerdes", email = "gerdes@uma.es" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.packages]
find = {}

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--cov", "--cov-report", "term-missing"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]
source = ["ml", "preprocessing"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[dependency-groups]
dev = [
    "matplotlib-stubs>=0.2.0",
    "microsoft-python-type-stubs",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff==0.11.8",
    "scipy-stubs>=1.15.2.2",
]
